<resources>
    <string name="app_name">DIY_ArcSeekBar</string>
    <string name="alarm_display_format">%dHR %dMIN</string>
    <string name="title">Schedule</string>
    <string name="bedtime_title">Bedtime</string>
    <string name="wake_up_title">Wake Up</string>
    <string name="default_time">00:00</string>
    <string name="bedtime_schedule">Bedtime Schedule</string>
    <string name="days_of_week_active">DAYS OF WEEK ACTIVE</string>

</resources>
