<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv_bedtime_schedule"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:text="@string/bedtime_schedule"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:layout_width="60dp"
        android:layout_height="30dp"
        android:layout_margin="15dp"
        android:checked="true"
        android:button="@drawable/cb_alarm_selector"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginTop="20dp"
        android:background="@color/line_color_2B2B2E"
        app:layout_constraintTop_toBottomOf="@id/tv_bedtime_schedule" />

    <TextView
        android:id="@+id/tv_day_off_week"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:text="@string/days_of_week_active"
        android:textColor="@color/color_scale_8C8C91_big"
        android:textSize="10sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/line" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycle_view"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:scrollbars="none"
        tools:listitem="@layout/item_week"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_day_off_week" />

    <TextView
        android:id="@+id/tv_sleep"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:minWidth="100dp"
        android:text="@string/bedtime_title"
        android:textColor="@color/orange_FF9F0A_text"
        android:textSize="18sp"
        android:drawableLeft="@mipmap/icon_sleep_left"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/tv_get_up"
        app:layout_constraintTop_toBottomOf="@+id/recycle_view" />

    <TextView
        android:id="@+id/tv_sleep_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:minWidth="100dp"
        android:text="@string/default_time"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/tv_get_up_time"
        app:layout_constraintTop_toBottomOf="@id/tv_sleep" />

    <TextView
        android:id="@+id/tv_get_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:minWidth="100dp"
        android:drawableLeft="@mipmap/icon_get_up_left"
        android:text="@string/wake_up_title"
        android:textColor="@color/orange_FFD60A_text"
        android:textSize="18sp"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toRightOf="@+id/tv_sleep"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recycle_view" />

    <TextView
        android:id="@+id/tv_get_up_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:minWidth="100dp"
        android:text="@string/default_time"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toRightOf="@+id/tv_sleep_time"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_get_up" />

    <com.cathy.diy_arcseekbar.AlarmSeekBar
        android:id="@+id/alarm_seek_bar"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_get_up_time"
        app:layout_constraintVertical_bias="0.3" />
</androidx.constraintlayout.widget.ConstraintLayout>